--- a/app/views/balances/index.html.erb
+++ b/app/views/balances/index.html.erb
@@ -13,7 +13,7 @@
   <tbody>
     <% @balances.each do |balance| %>
       <tr>
-        <td><%= balance.article %></td>
+        <td><%= balance.article.nombre %></td>
         <td><%= link_to 'Show', balance %></td>
         <td><%= link_to 'Edit', edit_balance_path(balance) %></td>
         <td><%= link_to 'Destroy', balance, method: :delete, data: { confirm: 'Are you sure?' } %></td>
