--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -29,7 +29,7 @@
         
 
         <td><%= link_to 'Show', article %></td>
-        
+        <td><%= link_to 'Ingresar', new_input_path %></td>
       </tr>
     <% end %>
   </tbody>
