--- a/app/views/inputs/index.html.erb
+++ b/app/views/inputs/index.html.erb
@@ -1,12 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Inputs</h1>
+<h1>Entradas</h1>
 
 <table>
   <thead>
     <tr>
+      <th>Fecha / Hora </th>
+      <th>Articulo</th>
       <th>Cantidad</th>
-      <th>Article</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,10 +17,11 @@
       <%= link_to 'New Input', new_input_path %>
     </div>
     
-    <% @inputs.each do |input| %>
+    <% @inputs.reverse.each do |input| %>
       <tr>
-        <td><%= input.cantidad %></td>
+        <td><%= input.created_at %></td>
         <td><%= input.article.nombre %></td>
+        <td><%= input.cantidad %></td>
         <td><%= link_to 'Show', input %></td>
         <td><%= link_to 'Edit', edit_input_path(input) %></td>
         <td><%= link_to 'Destroy', input, method: :delete, data: { confirm: 'Are you sure?' } %></td>
