--- a/app/views/inputs/new.html.erb
+++ b/app/views/inputs/new.html.erb
@@ -1,5 +1,5 @@
-<h1>Salida de artículo</h1>
+<h1>Entrada de artículo</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', inputs_path %>
+<%= link_to 'Back', articles_path %>
