--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -57,8 +57,7 @@
 
 <h3> Saldo </h3>
 <div>
-  <% arreglo=@article.balances.last(5)  %>
-  <% arreglo.reverse.each do |balance| %>
+  <% @balances.reverse.each do |balance| %>
     <div>
       <%= balance.saldo %> -  <%=balance.updated_at%>
     </div>
@@ -68,18 +67,16 @@
 
 <h3> Entradas </h3>
 <div>
-  <% arreglo2 = @article.inputs.last(5) %>
-  <% arreglo2.reverse.each do |input| %>
+  <% @inputs.reverse.each do |input| %>
     <div>
       <%= input.cantidad %> -  <%=input.updated_at%>
     </div>
-  <%end%>
+  <% end %>
 </div>
 
 <h3> Salidas </h3>
 <div>
-  <% arreglo2 = @article.outputs.last(5) %>
-  <% arreglo2.reverse.each do |output| %>
+  <% @outputs.reverse.each do |output| %>
     <div>
       <%= output.cantidad %> -  <%=output.updated_at%>
     </div>
