--- a/app/views/inputs/show.html.erb
+++ b/app/views/inputs/show.html.erb
@@ -6,8 +6,8 @@
 </p>
 
 <p>
-  <strong>Article:</strong>
-  <%= @input.article.nombre %>
+  <strong>Artículo:</strong>
+  <%= link_to @input.article.nombre, @input.article %>
 </p>
 
 <%= link_to 'Edit', edit_input_path(@input) %> |
