se agregan varias cosas, compras a la mitad

--- a/app/views/inputs/index.html.erb
+++ b/app/views/inputs/index.html.erb
@@ -14,7 +14,7 @@
 
   <tbody>
     <div>
-      <%= link_to 'New Input', new_input_path %>
+      <%= link_to 'New Input', root_path %>
     </div>
     
     <% @inputs.reverse.each do |input| %>
