--- a/app/views/outputs/index.html.erb
+++ b/app/views/outputs/index.html.erb
@@ -14,7 +14,7 @@
 
   <tbody>
     <div>
-      <%= link_to 'New Output', new_output_path %>
+      <%= link_to 'New Output', root_path %>
     </div>
 
     <% @outputs.reverse.each do |output| %>
