--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -15,6 +15,9 @@
 			<li class="col-md">
 				<%= link_to "Salidas", outputs_path %>
 			</li>
+			<li class="col-md">
+				<%= "Compras" %>
+			</li>
 		</ul>
 	</nav>
 </header>
