--- a/app/views/outputs/_form.html.erb
+++ b/app/views/outputs/_form.html.erb
@@ -15,7 +15,15 @@
     <%= f.label :cantidad %><br>
     <%= f.text_field :cantidad %>
   </div>
-  
+
+  <div class="field">
+      <%= f.label "Equipo" %><br>
+      <%= f.select(:equipment_id, options_for_select(@opciones_equipo), {include_blank: true}) %>
+  </div>
+  <div class="field">
+      <%= f.label "Operario" %><br>
+      <%= f.select(:worker_id, options_for_select(@opciones_operario), {include_blank: true}) %>
+  </div>
 
   <div class="actions">
     <%= f.submit %>
