cerrado circuito compras

--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -16,7 +16,7 @@
 				<%= link_to "Salidas", outputs_path %>
 			</li>
 			<li class="col-md">
-				<%= "Compras" %>
+				<%= link_to "Comprar", new_buyorder_path %>
 			</li>
 		</ul>
 	</nav>
