--- a/app/views/compras/_form.html.erb
+++ b/app/views/compras/_form.html.erb
@@ -1,3 +1,5 @@
+
+
 <%= form_for(@compra) do |f| %>
   <% if @compra.errors.any? %>
     <div id="error_explanation">
@@ -10,17 +12,13 @@
       </ul>
     </div>
   <% end %>
-
-  <% @faltantes.each do |articulo| %>
-    <% f.check_box %>
-
-"""""""""""""""""""""""""""""""""""""""""""""""
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
-
-SIN TERMINARR
-
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
-
+  <div class="field">
+    <% @faltantes.each do |articulo| %>
+      <div>
+        <%= check_box_tag "acomprar[]", articulo.id, checked = true %>  <%= articulo.nombre %>
+      </div>
+    <% end %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
