cambio a >= en actualizar saldo

--- a/app/views/inputs/index.html.erb
+++ b/app/views/inputs/index.html.erb
@@ -8,14 +8,13 @@
       <th>Fecha / Hora </th>
       <th>Articulo</th>
       <th>Cantidad</th>
+      <th>Remito</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <div>
-      <%= link_to 'New Input', root_path %>
-    </div>
+   
     
     <% @inputs.reverse.each do |input| %>
       <tr>
