--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -11,12 +11,13 @@
 			</li>
 			<li class="col-md">
 				<%= link_to "Entradas", inputs_path %>
-			</li>
-			<li class="col-md">
 				<%= link_to "Salidas", outputs_path %>
 			</li>
 			<li class="col-md">
 				<%= link_to "Comprar", new_buyorder_path %>
+			</li>
+			<li class="col-md">
+				<%= link_to "Pedidos", "/pedidos" %>
 			</li>
 		</ul>
 	</nav>
