--- a/app/views/inputs/_form.html.erb
+++ b/app/views/inputs/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label "Remito" %><br>
-    <%= f.text_field :remito %>
+    <%= f.number_field :remito %>
   </div>
     
 
