--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -8,10 +8,11 @@
 			</li>
 			<li class="col-md">
 				<%= link_to "Artículos", articles_path %>
-			</li>
-			<li class="col-md">
 				<%= link_to "Entradas", inputs_path %>
 				<%= link_to "Salidas", outputs_path %>
+			</li>
+			<li class="col-md">
+				<%= link_to "Reportes", reportes_path %>
 			</li>
 			<li class="col-md">
 				<%= link_to "Comprar", new_buyorder_path %>
