--- a/app/views/balances/show.html.erb
+++ b/app/views/balances/show.html.erb
@@ -1,9 +1,23 @@
 <p id="notice"><%= notice %></p>
 
+<h2>Saldo número <%= @balance.id %></h2>
+
 <p>
   <strong>Article:</strong>
-  <%= @balance.article %>
+  <%= link_to @balance.article.nombre, @balance.article %>
 </p>
 
-<%= link_to 'Edit', edit_balance_path(@balance) %> |
+
+
+<% if @balance.input.present? %>
+	<p>
+		<strong>Entrada: <%= link_to @balance.input.id, @balance.input %></strong>
+	</p>
+<% elsif @balance.output.present?	%>
+	<p>
+		<strong>Salida: <%= link_to @balance.output.id, @balance.output %></strong>
+	</p>
+	
+	<% end %>
+
 <%= link_to 'Back', balances_path %>
