nombre de artículo en forms de entrada y salida

--- a/app/views/outputs/_form.html.erb
+++ b/app/views/outputs/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_for([@article,@output]) do |f| %>
+  <h2><%= @article.nombre %></h2>
   <% if @output.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@output.errors.count, "error") %> prohibited this output from being saved:</h2>
